--- a/style.css
+++ b/style.css
@@ -1,29 +1,53 @@
-.mainmenubtn {
-    background-color: skyblue;
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding:20px;
-    margin-top:20px;
+* {
+    margin:0px;
+    padding:0px;
+    background-color:plum;
 }
-.mainmenubtn:hover {
-    background-color: blue;
-    }
-.dropdown {
-    position: relative;
-    display: inline-block;
+
+#header {
+    margin:auto;
+    width:500px;
+    font-family:Arial, Helvetica, sans-serif;
 }
-.dropdown-child {
-    display: none;
-    background-color: skyblue;
-    min-width: 200px;
+
+ul, ol {
+    list-style:none;
+    
 }
-.dropdown-child a {
-    color: blue;
-    padding: 20px;
-    text-decoration: none;
-    display: block;
+
+.nav > li {
+    float:left;
 }
-.dropdown:hover .dropdown-child {
-    display: block;
+
+.nav li a {
+    background-color:darkmagenta;
+    color:#fff;
+    text-decoration:none;
+    padding:10px 12px;
+    width: 100%;
+    display:block;
+}
+
+.nav li a:hover {
+    background-color:rebeccapurple;
+}
+
+.nav li ul {
+    display:none;
+    position:absolute;
+    min-width:140px;
+}
+
+.nav li:hover > ul {
+    display:block;
+}
+
+.nav li ul li {
+    position:relative;
+}
+
+.nav li ul li ul {
+    right:140px;
+    top:0px;
+    width: 100%;
 }
