--- a/style.css
+++ b/style.css
@@ -1,53 +1,30 @@
-* {
-    margin:0px;
-    padding:0px;
-    background-color:plum;
+
+/*barra navegadora*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 1px solid lightseagreen;
+  background-color:  lightseagreen;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-#header {
-    margin:auto;
-    width:500px;
-    font-family:Arial, Helvetica, sans-serif;
+li {
+  float: left;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-ul, ol {
-    list-style:none;
-    
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.nav > li {
-    float:left;
-}
-
-.nav li a {
-    background-color:darkmagenta;
-    color:#fff;
-    text-decoration:none;
-    padding:10px 12px;
-    width: 100%;
-    display:block;
-}
-
-.nav li a:hover {
-    background-color:rebeccapurple;
-}
-
-.nav li ul {
-    display:none;
-    position:absolute;
-    min-width:140px;
-}
-
-.nav li:hover > ul {
-    display:block;
-}
-
-.nav li ul li {
-    position:relative;
-}
-
-.nav li ul li ul {
-    right:140px;
-    top:0px;
-    width: 100%;
+li a:hover:not(.active) {
+  background-color: lightskyblue;
 }
