--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  border: 1px solid darkturquoise;
-  background-color:  darkturquoise;
+  border: 1px solid rgb(99, 0, 99);
+  background-color:  rgb(99, 0, 99);
   position: fixed;
   top: 0;
   width: 100%;
@@ -15,21 +15,98 @@ ul {
 li {
   float: left;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: darkturquoise;
+  background-color: rgb(99, 0, 99);
 }
 
 li a {
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover:not(.active) {
-  background-color: lightskyblue;
+  background-color: rgb(160, 12, 160);
 }
 /*Sign up*/
 *{
   box-sizing: border-box;
+}
+body{
+  background:violet;
+  color: white ;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0 1.5em;
+}
+.content{
+  max-width:  1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2.5em;
+}
+.logo{
+  text-align: center;
+  font-size: 3em;
+}
+.logo span{
+  color:purple;
+}
+.contact-wrapper{
+  box-shadow:0 0 20px 0 rgba(255, 255, 2555, .3);
+}
+.contact-wrapper > *{
+  padding: 1em;
+}
+.contact-form{
+  background: rgb(235, 120, 235);
+}
+.contact-form form{
+  margin: 0;
+  padding: 1em;
+}
+.contact-form form{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.contact-form form .block{
+  grid-column: 1 / 3;
+}
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea{
+  width: 100%;
+  padding: .7em;
+  border: none;
+  background: none;
+  outline: 0;
+  border-bottom: 1px solid purple;
+  color: white;
+}
+.contact-form form button{
+  background: purple;
+  color: black;
+  border: 0;
+  text-transform:uppercase ;
+  padding: 1em;
+}
+.contact-form form button:hover,
+.contact-form form button:focus{
+  background: purple;
+  color: white;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+/*large screen*/
+@media(min-width: 700px){
+  body{
+    padding: 0 4rem;
+  }
+  .contact-wrapper{
+    display: grid;
+    grid-template-columns:2fr 1fr;
+  }
+  .contact-wrapper > *{
+    padding: 2em;
+  }
 }
