--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ body{
   grid-column: 1 / 3;
 }
 .contact-form form button,
-.contact-form form input{
+.contact-form form input,
+.contact-form form select{
   width: 100%;
   padding: .7em;
   border: none;
@@ -81,6 +82,9 @@ body{
   outline: 0;
   border-bottom: 1px solid purple;
   color: white;
+}
+.contact-form form select{
+  background: rgb(235, 120, 235);
 }
 .contact-form form button{
   background: purple;
